# cinolib

./: .gitignore  .gitmodules  LICENSE  RBF.h  RBF_library.h  README.md  TODO.md  _TODO_.txt  abstract_polyhedralmesh.cpp  bbox.cpp  bbox.h  bfs.cpp  bfs.h  cino_inline.h  cinolib-config.cmake  cinolib.h  color.cpp  color.h  colors.cpp  colors.h  common.h  connected_components.cpp  cotangent.cpp  cotangent.h  curve.cpp  curve.h  determinant.h  drawable_curve.cpp  drawable_curve.h  drawable_isocontour.cpp  drawable_isocontour.h  drawable_isosurface.cpp  drawable_isosurface.h  drawable_object.h  drawable_vector_field.h  dual_mesh.cpp  dual_mesh.h  geodesics.cpp  geodesics.h  gradient.cpp  (+68 more)
examples/: .qmake.stash  CMakeLists.txt  README.md  build_all_examples.pro
examples/00_base_app/: 00_base_app.pro  base_app.pro  main.cpp
examples/01_base_app_trimesh/: 01_base_app_trimesh.pro  main.cpp
examples/01_load_textured_OBJs/: 01_load_textured_OBJ.pro  01_load_textured_OBJs.pro  load_textured_OBJ.pro  main.cpp
examples/01_trimesh_viewer/: CMakeLists.txt  main.cpp
examples/02_base_app_quadmesh/: 02_base_app_quadmesh.pro  main.cpp
examples/02_polyharmonic_functions/: 02_polyharmonic_functions.pro
examples/02_polyharmonic_functions_srf/: 02_polyharmonic_functions_srf.pro  main.cpp
examples/02_quadmesh_viewer/: CMakeLists.txt  main.cpp
examples/03_base_app_polygonmesh/: 03_base_app_polygonmesh.pro  main.cpp
examples/03_polygonmesh_viewer/: CMakeLists.txt  main.cpp
examples/03_polyharmonic_functions_vol/: 03_polyharmonic_functions_vol.pro  main.cpp
examples/04_base_app_tetmesh/: 04_base_app_tetmesh.pro  main.cpp
examples/04_map_to_sphere/: 04_map_to_sphere.pro  main.cpp
examples/04_tetmesh_viewer/: CMakeLists.txt  main.cpp
examples/05_base_app_hexmesh/: 05_base_app_hexmesh.pro  main.cpp
examples/05_hexmesh_viewer/: CMakeLists.txt  main.cpp
examples/05_polygon_mesh_generation/: 05_polygon_mesh_generation.pro  main.cpp
examples/06_base_app_polyhedralmesh/: 06_base_app_polyhedralmesh.pro  main.cpp
examples/06_polyhedral_mesh_generation/: 06_polyhedral_mesh_generation.pro  main.cpp
examples/06_polyhedralmesh_viewer/: CMakeLists.txt  main.cpp
examples/07_heat_based_geodesics/: 07_heat_based_geodesics.pro
examples/07_texture_loading/: CMakeLists.txt  main.cpp
examples/07_textured_OBJs/: 07_textured_OBJs.pro  main.cpp
examples/08_picking/: 08_picking.pro  CMakeLists.txt  main.cpp
examples/08_polyharmonic_functions_srf/: 08_polyharmonic_functions_srf.pro  main.cpp
examples/09_polyharmonic_functions_srf/: 09_polyharmonic_functions_srf.pro  CMakeLists.txt  main.cpp
examples/09_polyharmonic_functions_vol/: 09_polyharmonic_functions_vol.pro  main.cpp
examples/10_map_to_sphere/: 10_map_to_sphere.pro  main.cpp
(+1041 files in other folders)
